--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
   "icons": [
     {
       "src": "favicon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
